<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="fr.strada.smobile.ui.auth.auth0.Auth0ViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.auth.auth0.AuthActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/com_auth0_lock_action_log_in"
                android:textColor="@color/backgroundColor"
                android:textSize="28sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="36dp"
                android:hint="@string/Email"
                android:textColorHint="@color/blueGray"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/backgroundColor"
                app:boxStrokeWidth="2dp"
                app:endIconMode="clear_text"
                app:helperTextEnabled="false"
                app:layout_constraintBottom_toBottomOf="@id/guideline12"
                app:layout_constraintEnd_toEndOf="@id/guidlinevert1"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@id/guidlinevert0"
                app:layout_constraintTop_toTopOf="@id/guideline11">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_nom_email"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:fontFamily="@font/sf_ui_display_semibold"
                    android:inputType="text"
                    android:paddingStart="14dp"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:textColor="@color/backgroundColor"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="5dp"
                android:hint="@string/mot_de_passe"
                android:textColorHint="@color/blueGray"
                app:boxBackgroundMode="outline"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/backgroundColor"
                app:boxStrokeWidth="2dp"
                app:endIconMode="password_toggle"
                app:layout_constraintBottom_toBottomOf="@id/guideline13"
                app:layout_constraintEnd_toEndOf="@id/guidlinevert1"
                app:layout_constraintStart_toStartOf="@id/guidlinevert0"
                app:layout_constraintTop_toTopOf="@id/guideline12">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inpute_password"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:inputType="textPassword"
                    android:paddingLeft="0dp"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp"
                    android:paddingRight="0dp"
                    android:paddingBottom="0dp"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.github.ybq.android.spinkit.SpinKitView
                android:id="@+id/loader"
                style="@style/SpinKitView.Large.Circle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:elevation="3dp"
                android:visibility="invisible"
                app:SpinKit_Color="@color/colorAccent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_auth"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:onClick="pressBtnIdentifier"
                android:text="@string/connexion"
                app:cornerRadius="8dp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="180dp"
            android:layout_height="100dp"
            android:layout_marginTop="128dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_spi" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_ui_display_semibold"
            android:text="By Strada"
            android:textColor="@color/backgroundColor"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>


